After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674057 - uridecodebin: Shouldn't treat live sources as streaming sources
uridecodebin: Shouldn't treat live sources as streaming sources
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
0.11.x
Other Linux
: Normal normal
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-04-13 14:34 UTC by Julian Scheel
Modified: 2012-04-14 08:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix for is-live sources (1.54 KB, patch)
2012-04-13 14:34 UTC, Julian Scheel
none Details | Review

Description Julian Scheel 2012-04-13 14:34:38 UTC
Created attachment 211999 [details] [review]
fix for is-live sources

For live sources one cannot preread unlimited amount of data. Therefore it is a bad idea to have a queue2 element between the source and the demux element. This patch disabled the is_stream flag for all sources that have is-live disabled. This has to happen after the source-setup signal was emitted, for situations where the application sets the is-live flag.

This fixes playback of http streams from a dvb->http live gateway.
Comment 1 Wim Taymans 2012-04-14 08:48:38 UTC
(In reply to comment #0)
> 
> This fixes playback of http streams from a dvb->http live gateway.

It's a really bad idea to set is-live on http sources, the nature of TCP is not live at all.
Comment 2 Wim Taymans 2012-04-14 08:53:28 UTC
commit fd4c8d9252ca9c6e766d58bac844a1cc31e92e11
Author: Julian Scheel <julian@jusst.de>
Date:   Fri Apr 13 16:29:50 2012 +0200

    uridecodebin: Never treat live sources as streaming sources.
    
    For streaming sources a queue is added before the demuxer, which can not be
    properly filled by live sources. As http source can be live sources, this
    caused issues for example with http live sources.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=674057